changed resume and fixed typo on translation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,7 +11,7 @@
   "contactMe": "Contact Me",
   "aboutMe": "About Me",
   "aboutText": {
-    "first": "Hello! My name is Mehmet Eren Çelik and I am a self-taught developer. I am passionate about web development and front end. I graduated from law school in 2021, but during the Covid era an while doing my legal apprenticeship, I became interested in web development. I have been studying full-time on this field since june 2022.",
+    "first": "Hello! My name is Mehmet Eren Çelik and I am a self-taught developer. I am passionate about web development and front end. I graduated from law school in 2021, but during the Covid era and while doing my legal apprenticeship, I became interested in web development. I have been studying full-time on this field since june 2022.",
     "second": " I started with learning HTML & CSS and during this process, I also learned technologies like JavaScript, TypeScript, React.js, Next.js, and Remix.js. Most recently, I have been learning Dart and Flutter as a Trainee at",
     "third": "since December 2022. Constantly improving myself and learning new technologies is essential for me.",
     "fourth": "As I continue on this passionate journey, I enjoy working and developing myself. I will continue to improve and learn in the future as well. Collaborating with people who share this passion would be a great pleasure for me.",
